Fix stop button formatting from overlapping images

--- a/css/style.css
+++ b/css/style.css
@@ -24,3 +24,7 @@ p {
 form {
     margin: 20px;
 }
+
+#stopButton {
+    margin:20px;
+}
